Fix map styling on mobile
KB-463

--- a/app/styles/map-view.scss
+++ b/app/styles/map-view.scss
@@ -16,7 +16,12 @@
   }
   .is-mobile.is-map-view & {
     width: 100%;
-    height: calc(100vh - 40px);
+    height: 100%;
+
+    #timeWarpToggle, #mapLocation {
+      bottom: 20px;
+      position: fixed;
+    }
   }
 }
 
